@@ -7,6 +7,7 @@ Changelog
 Supported geoLink schema versions: v1.0.0, v1.1.0, v1.1.1 (default)
 
 - Add test for arbitrary URL parameters
+- Add enumeration value "Bezirk" for attribute "federal_level"
 
 
 1.3.2
